[project]
name = "kaks"
version = "0.0.1"
description = "Tool to perform Ka/Ks analysis on a given query and reference sequences."
dependencies = [
    "pandas",
    "biopython",
]
requires-python = ">= 3.10"

[project.scripts]
kaks = "kaks.kaks:cli_main"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"